<resources>
    <string name="app_name">TopWho</string>
    <string name="topWhoAccessibilityDescription">开启无障碍服务获取当前Activity的信息</string>
    <string name="sw_open_float_permission">打开悬浮窗权限</string>
    <string name="sw_close_float_window">关闭悬浮窗</string>
    <string name="sw_show_float_window">显示悬浮窗</string>
    <string name="dialog_enable_overlay_window_msg">Android 7.1.1 以上, 请开启悬浮窗权限</string>
    <string name="dialog_enable_overlay_window_positive_btn">去开启</string>
    <string name="sw_open_accessibility_permission">启用无障碍服务</string>


    <string name="is_running">%s 正在运行</string>
    <bool name="use_accessibility_service">false</bool>
    <string name="touch_to_open">点击设置.</string>
    <string name="noti_action_pause">暂停</string>
    <string name="noti_action_resume">恢复</string>
    <string name="noti_action_stop">停止</string>


    <string name="switch_float_permission">悬浮窗权限</string>
    <string name="switch_open_float_permission_title">打开悬浮窗权限</string>
    <string name="switch_open_float_title">打开悬浮窗</string>
    <string name="switch_open_float_summary_on">点击关闭悬浮窗</string>
    <string name="switch_open_float_summary_off">点击显示悬浮窗</string>
    <string name="title_activity_app_list">AppListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
