<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/switch_float_permission">

        <SwitchPreferenceCompat
                app:key="switch_open_float_permission"
                app:title="@string/switch_open_float_permission_title"/>

        <SwitchPreferenceCompat
                app:key="switch_open_float"
                app:title="@string/switch_open_float_title"
                app:summaryOn="@string/switch_open_float_summary_on"
                app:summaryOff="@string/switch_open_float_summary_off"
                app:dependency="switch_open_float_permission"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
